add distance control

--- a/Objects/ACFly.build_log.htm
+++ b/Objects/ACFly.build_log.htm
@@ -27,6 +27,11 @@ Project File Date:  04/18/2021
 <h2>Output:</h2>
 *** Using Compiler 'V6.13.1', folder: 'D:\KEIL_FOR_32\ARM\ARMCLANG\Bin'
 Build target 'Target 1'
+compiling ACFLY_cmd.hpp...
+compiling M35_Auto1.cpp...
+linking...
+Program Size: Code=454032 RO-data=280820 RW-data=552380 ZI-data=58324  
+FromELF: creating hex file...
 ".\Objects\ACFly.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -41,7 +46,7 @@ Package Vendor: Keil
   D:\KEIL_FOR_32\ARM\Keil\STM32H7xx_DFP\2.6.0\Drivers\CMSIS\Device\ST\STM32H7xx\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:09
 </pre>
 </body>
 </html>
